# Ai-Assassins

./: .gitignore  CHANGELOG.md  Chatkit.js  INVESTOR_DECK.md  Makefile  PHASE_A_TRACKER.md  README.md  README_APP.md  README_LAUNCH.md  README_STORE_DEPLOY.md  RUNBOOK_REVENUE_FORTRESS.md  SECURITY.md  chatkit.js  dashboard.html  deploy.sh  index.html  integrations.js  manifest.webmanifest  package.json  setup.cfg  sw.js
briefings/: 2026-02-20.txt
docs/: 30_DAY_STABILIZATION_PLAN.md  API_REFERENCE.md  ARCHAIOS_BRIEFING.md  COMMAND_API.md  DAILY_ALERTS.md  DASHBOARD_OVERVIEW.md  DEPLOYMENT.md  ENTERPRISE_GUIDE.md  MARKETING_LAUNCH_CONTENT.md  PHASE2_SETUP.md  PRICING_FLOW.md  PRIVACY_POLICY.md  README.md  README_APP.md  RELEASE_CHECKLIST.md  REVENUE_API.md  SITREP_INTEGRATION.md  SMOKE_TEST.md  STRIPE_SETUP.md  SUPABASE_SCHEMA.sql  TERMS_OF_SERVICE.md  app.js  archaios-briefing.html  archaios-briefing.js  cancel.html  chatkit.js  config.js  dashboard.html  index.html  integrations.js  login.html  manifest.webmanifest  package.json  pricing.html  pricing.js  privacy.html  setup-deployment-monetization.md  sitrep.html  styles.css  success.html  (+4 more)
mobile/: README.md  capacitor.config.ts  package.json
scripts/: agent-smoke.mjs  archaios_capture  archaios_dashboard  archaios_init  generate-store-assets.sh  mobile-release.sh  pages-deploy.mjs  sitrep-send-test.js  supabase-init.sh  supabase-migrate.sh  test-sitrep-auth.js  worker-deploy.mjs  worker-put-secrets.mjs
src/: sitrep-server.js
store-assets/: README.md
supabase/: README.md
tests/: test_cli_bootstrap.py  (+2 more)
(+87 files in other folders)
