[metadata]
name = ai-assassins-local
version = 0.1.0
description = Local tooling package config for AI Assassins

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    streamlit>=1.32

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.0
    ruff>=0.6
watch =
    watchdog>=4.0

[options.entry_points]
console_scripts =
    archaios_init = ai_assassins_local.archaios.capture:main_init
    archaios_capture = ai_assassins_local.archaios.capture:main_capture
    archaios_dashboard = ai_assassins_local.archaios.dashboard:main
